Use SequencedCollection method (Java 21)