@@ -375,7 +375,7 @@ public class Search implements StaplerProxy {
 
         // couldn't find an item with the query in the url so just
         // return the first one
-        return r.get(0);
+        return r.getFirst();
     }
 
     /**
@@ -397,7 +397,7 @@ public class Search implements StaplerProxy {
             return null;
         }
         else if (1 == r.size()) {
-            return r.get(0);
+            return r.getFirst();
         }
         else  {
             // we have more than one suggested item, so return the item who's url
