@@ -1025,7 +1025,7 @@ public class QueueTest {
         project1.scheduleBuild2(0);
         QueueTaskFuture<FreeStyleBuild> v = project2.scheduleBuild2(0);
         projectError.scheduleBuild2(0);
-        Executor e = r.jenkins.toComputer().getExecutors().get(0);
+        Executor e = r.jenkins.toComputer().getExecutors().getFirst();
         Thread.sleep(2000);
         while (project2.getLastBuild() == null) {
              if (!e.isAlive()) {
@@ -1191,7 +1191,7 @@ public class QueueTest {
         //james has DISCOVER permission on the project and will only be able to see the task name.
         List projects = p3.getByXPath("/queue/discoverableItem/task/name/text()");
         assertEquals(1, projects.size());
-        assertEquals("project", projects.get(0).toString());
+        assertEquals("project", projects.getFirst().toString());
 
         // Also check individual item exports.
         String url = project.getQueueItem().getUrl() + "api/xml";
@@ -1230,11 +1230,11 @@ public class QueueTest {
         queue.maintain();
 
         assertEquals(1, r.jenkins.getQueue().getBlockedItems().size());
-        CauseOfBlockage actual = r.jenkins.getQueue().getBlockedItems().get(0).getCauseOfBlockage();
+        CauseOfBlockage actual = r.jenkins.getQueue().getBlockedItems().getFirst().getCauseOfBlockage();
         CauseOfBlockage expected = new BlockedBecauseOfBuildInProgress(t1.getFirstBuild());
 
         assertEquals(expected.getShortDescription(), actual.getShortDescription());
-        Queue.getInstance().doCancelItem(r.jenkins.getQueue().getBlockedItems().get(0).getId());
+        Queue.getInstance().doCancelItem(r.jenkins.getQueue().getBlockedItems().getFirst().getId());
         r.assertBuildStatusSuccess(r.waitForCompletion(build));
     }
 
@@ -1521,7 +1521,7 @@ public class QueueTest {
         var computer = onlineSlave.toComputer();
         Timer.get().execute(() -> {
             // Simulate a computer failure just after the executor is created
-            while (computer.getExecutors().get(0).getStartTime() == 0) {
+            while (computer.getExecutors().getFirst().getStartTime() == 0) {
                 try {
                     Thread.sleep(10);
                 } catch (InterruptedException e) {
