@@ -126,7 +126,7 @@ class RunTest  {
         b.keepLog();
         List<BuildBadgeAction> badgeActions = b.getBadgeActions();
         assertEquals(1, badgeActions.size());
-        assertEquals(Run.KeepLogBuildBadge.class, badgeActions.get(0).getClass());
+        assertEquals(Run.KeepLogBuildBadge.class, badgeActions.getFirst().getClass());
     }
 
     @Issue("JENKINS-51819")
@@ -358,7 +358,7 @@ class RunTest  {
         var response = run.getRunTabs();
 
         assertThat(response, hasSize(1));
-        assertThat(response.get(0).getDisplayName(), equalTo("Test"));
+        assertThat(response.getFirst().getDisplayName(), equalTo("Test"));
     }
 
     public static final class SlowMgr extends ArtifactManager {
